...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="Request Autofill" />

    <Button
      android:id="@+id/fixture_credential_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="Request Password Credential" />

    <TextView
...
